Refactor and cleanup across multiple files (#4339)
* Refactor and cleanup across multiple files

Replaces usages of List.size() > 0 with !List.isEmpty(), improves string and list handling with StringBuilder and direct constructors, updates method references for comparators, and applies minor code style and API usage improvements. Removes unused UploadRecentGameStatistics command, renames PolticsPosition to PoliticsPosition, and moves Ban-related classes to a new package. Also fixes various small bugs and improves code readability throughout the codebase.

* Refactor deck and model settings to remove Optionals

Replaces usage of Optional for Game and boolean fields in DeckSettings, GameSettings, GameSetupSettings, ActionCardModel, and TileModel with direct references. Also updates method signatures and related logic to simplify code and improve readability. Adjusts WebScoreBreakdown to remove unused poKey parameter from addMultiScoredEntries.

* Refactor annotations and string handling in user settings

Removed redundant Javadoc from deprecated method in Helper.java. Improved Javadoc formatting in NamedParam annotation and removed unnecessary public modifier. Simplified string assignment in UserSettings by eliminating unnecessary StringBuilder conversion.

* Add @NotNull annotations and update constructors

Added @NotNull annotations to Game parameters in several settings menu classes for improved null-safety. Updated constructors in GameSettings and GameSetupSettings to be package-private and removed null checks, assuming Game is always non-null. Minor visibility and code consistency improvements.